[tool.poetry]
name = "myocpp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
websockets = "^10.4"
ocpp = "^0.17.0"
typer = "^0.7.0"
questionary = "^1.10.0"
faker = "^16.6.1"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
